修正了画面为90°旋转的问题，还全屏显示了

--- a/app/src/main/res/layout/activity_camera_view.xml
+++ b/app/src/main/res/layout/activity_camera_view.xml
@@ -34,7 +34,7 @@
             android:text="后置摄像头" />
     </RadioGroup>
 
-    <org.opencv.android.JavaCameraView
+    <org.opencv.android.JavaCamera2View
         android:id="@+id/cv_camera"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
