解决摄像角度问题，已经可以完美显示，增加人脸检测，而且效果很好

--- a/app/src/main/res/menu/camrea_view_menus.xml
+++ b/app/src/main/res/menu/camrea_view_menus.xml
@@ -4,4 +4,6 @@
     <item android:id="@+id/edge" android:title="@string/edge"></item>
     <item android:id="@+id/sobel" android:title="@string/sobel"></item>
     <item android:id="@+id/boxblur" android:title="@string/boxblur"></item>
+
+    <item android:id="@+id/face_detection" android:title="@string/faceDetection"></item>
 </menu>
